unpackaged/main/default/objects/OrderApi__Shipping_Region__c/OrderApi__Shipping_Region__c.object-meta.xml
<CustomObject>
    <description>Shipping Regions are used to define Shipping Rates, or areas that the organization Will Not Ship to.</description>
    <label>Shipping Region</label>
    <nameField>
        <label>Shipping Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>