unpackaged/main/default/objects/OrderApi__Shipping_Region__c/fields/OrderApi__Address__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Address__c</fullName>
    <description>Address for related Shipping Region.</description>
    <inlineHelpText>Address for related Shipping Region.</inlineHelpText>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>