unpackaged/main/default/objects/OrderApi__Shipping_Region__c/fields/OrderApi__Address_Field_Values_CSV__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Address_Field_Values_CSV__c</fullName>
    <description>Comma separated address field values.</description>
    <inlineHelpText>Enter country names, separated by a comma.</inlineHelpText>
    <label>Address Field Values (CSV)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>