unpackaged/main/default/objects/OrderApi__Shipping_Region__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>Description for related Shipping Region.</description>
    <inlineHelpText>Describe the Shipping Region.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>