unpackaged/main/default/objects/OrderApi__Shipping_Region__c/fields/OrderApi__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Name__c</fullName>
    <description>Display name for the specific Shipping Region.</description>
    <inlineHelpText>Enter a display name for the Shipping Region.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>