unpackaged/main/default/objects/OrderApi__Shipping_Region__c/fields/OrderApi__Is_Default_Region__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Default_Region__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The default region will match any shipping destination that is not explicitly defined in another region. Leave the Address Field Values (CSV) field blank when enabling this feature.</description>
    <inlineHelpText>The default region will match any shipping destination that is not explicitly defined in another region. Leave the Address Field Values (CSV) field blank when enabling this feature.</inlineHelpText>
    <label>Is Default Region</label>
    <type>Checkbox</type>
</CustomField>