unpackaged/main/default/objects/OrderApi__Shipping_Region__c/fields/OrderApi__Will_Not_Ship__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Will_Not_Ship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that makes this a Will Not Ship region.</description>
    <inlineHelpText>Select the checkbox if this is a region the organization Will Not Ship to.</inlineHelpText>
    <label>Will Not Ship</label>
    <type>Checkbox</type>
</CustomField>