unpackaged/main/default/objects/OrderApi__Shipping_Region__c/fields/OrderApi__Will_Not_Ship_Message__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Will_Not_Ship_Message__c</fullName>
    <description>This message is displayed in the checkout UI when the buyer enters a shipping destination that is in a Will Not Ship region.</description>
    <inlineHelpText>Enter a message that will display in the checkout screen when a customer tries to ship to a Will Not Ship region.</inlineHelpText>
    <label>Will Not Ship Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>